--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <h1>Jose Rodriguez</h1>
-  <p><Course: Web Applications Programming</p>
-  <p><Major: Computer Science</p>
+  <p>Course: Web Applications Programming</p>
+  <p>Major: Computer Science</p>
   <p>Hello, World!</p>
 </body>
 </html>
