--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Web Page</title>
+    <meta charset="UTF-8">
+    <title>Dynamic Time-Based Background</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            color: white;
+            text-align: center;
+            padding-top: 100px;
+            transition: background-color 0.5s ease;
+        }
+    </style>
+    <script>
+        // Function to run the page
+        function changeBackground() {
+            // Get the time
+            const now = new Date();
+            const hour = now.getHours();
+
+            // Nackground color
+            let backgroundColor = "";
+
+          
+            if (hour >= 6 && hour < 12) {
+                backgroundColor = "#FFDD57"; // Morning 
+            } else if (hour >= 12 && hour < 18) {
+                backgroundColor = "#4DA6FF"; // Afternoon 
+            } else if (hour >= 18 && hour < 21) {
+                backgroundColor = "#FF884D"; // Evening 
+            } else {
+                backgroundColor = "#33334D"; // Night 
+            }
+
+            // Apply the background color 
+            document.body.style.backgroundColor = backgroundColor;
+        }
+
+        // Run the function when loading
+        window.onload = changeBackground;
+    </script>
 </head>
 <body>
-  <h1>Jose Rodriguez</h1>
-  <p>Course: Web Applications Programming</p>
-  <p>Major: Computer Science</p>
-  <p>Hello, World!</p>
+    <h1>Jose Rodriguez</h1>
+    <p>Course: Web Applications Programming</p>
+    <p>Major: Computer Science</p>
+    <h2>Welcome to my dynamic webpage!</h2>
 </body>
 </html>
