--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <h1>Jose Rodriguez</h1>
     <p>Course: Web Applications Programming</p>
     <p>Major: Computer Science</p>
-    <h2>Welcome to my dynamic webpage!</h2>
+    <h2>Welcome to my webpage</h2>
 </body>
 </html>
