--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     const hour = new Date().getHours();
 
     if (hour >= 6 && hour < 12) {
-      // Morning image
+      // Morning 
       image.src = "https://images.unsplash.com/photo-1502086223501-7ea6ecd79368?auto=format&fit=crop&w=800&q=80";
       image.alt = "Morning Scene";
     } else if (hour >= 12 && hour < 18) {
-      // Afternoon image
+      // Afternoon 
       image.src = "https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80";
       image.alt = "Afternoon Scene";
     } else {
-      // Night image (your selected sunset)
+      // Night 
       image.src = "https://images.unsplash.com/photo-1518837695005-2083093ee35b?auto=format&fit=crop&w=800&q=80";
       image.alt = "Night Scene";
     }
